Add OpenMetadata Data Quality blog images and update links

--- a/index.html
+++ b/index.html
@@ -796,6 +796,53 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/leveraging-the-power-of-openmetadata-data-quality-framework-385ba2d8eaf"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/om-data-quality.png"
+                      alt="release-om-data-quality"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        Leveraging the Power of OpenMetadata Data Quality
+                        Framework
+                      </h4>
+                      <p class="card-text">
+                        OpenMetadata offers the possibility to execute data
+                        quality tests directly from the UI, making it a powerful
+                        tool for everyone in the company.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-release-1-2-531f0e3c6d9a"
                     target="_blank"
                   >
@@ -886,51 +933,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-1-1-0-release-97c1fb603bcf"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/v1.1.jpg"
-                      alt="release-1.1.0"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 1.1.0 Release
-                      </h4>
-                      <p class="card-text">
-                        UI Overhaul, New Connectors, Improved Lineage Parsing,
-                        PII Masking, and lots more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
+
                 <div class="text-center">
                   <a
                     class="btn btn-primary fw-500"
