Update OpenMetadata to version 1.3.0

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                   <div class="col-lg-7" data-aos="fade-up">
-                    <h1 class="page-header-ui-title fw-700 mb-4">
+                    <h1 class="page-header-ui-title fw-700 mb-4 mt-4">
                       OpenMetadata
                     </h1>
                     <h3 class="page-header-ui-subtitle text-primary">
@@ -260,18 +260,18 @@
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
                   <div class="display-6 text-primary fw-500">
-                    1.2.0 Released - Try Now!
+                    1.3.0 Released - Try Now!
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    <strong>OpenMetadata 1.2.0 Released</strong> Domains and
-                    Data Products, Search Indexes, Elasticsearch connector,
-                    Store Procedure, Knowledge Center, Cost analysis,
-                    Customizable Landing Pages and lots more.
-                    <strong>OpenMetadata 1.2.0 Release</strong>
+                    <strong>OpenMetadata 1.3.0 Released</strong> Intuitive
+                    Lineage UI, Data Observability Alerts, Data Quality Incident
+                    Manager, Custom Metrics for Profiler, Knowledge Center
+                    Improvements, and lots more.
+                    <strong>OpenMetadata 1.3.0 Release</strong>
                     <a
-                      href="https://blog.open-metadata.org/openmetadata-release-1-2-531f0e3c6d9a"
+                      href="https://blog.open-metadata.org/openmetadata-release-1-3-ac801834ee80"
                       target="_blank"
                       >Read more here</a
                     >.
@@ -796,6 +796,50 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-release-1-3-ac801834ee80"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/release-1.3.0.webp"
+                      alt="data-quality-blog"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">OpenMetadata Release 1.3</h4>
+                      <p class="card-text">
+                        Intuitive Lineage UI, Data Observability Alerts, Data
+                        Quality Incident Manager, Custom Metrics for Profiler,
+                        Knowledge Center Improvements, and lots more
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/leveraging-the-power-of-openmetadata-data-quality-framework-385ba2d8eaf"
                     target="_blank"
                   >
@@ -859,54 +903,6 @@
                         Glossary Approval Workflow, Customizable Landing Page,
                         Applications, Knowledge Center, Cost Analysis, and lots
                         more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/simple-easy-and-efficient-data-quality-with-openmetadata-1c4e7d329364"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/data-quality-blog.png"
-                      alt="data-quality-blog"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        Simple, Easy, and Efficient Data Quality with
-                        OpenMetadata
-                      </h4>
-                      <p class="card-text">
-                        In this blog, we’ll explore how OpenMetadata natively
-                        supports data quality that is key to many advantages —
-                        lowered cost, improved productivity, better
-                        collaboration, and many more.
                       </p>
                     </div>
                     <div
